--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,8 +9,8 @@
             <button ion-item (click)="openPage(articlesPage)">
                 Actualités
             </button>
-            <button ion-item="">
-                Concours
+            <button ion-item (click)="openPage(marquagePage)">
+                Demande de marquages
             </button>
         </ion-list>
     </ion-content>
